--- a/scss/slides.css
+++ b/scss/slides.css
@@ -13,7 +13,7 @@
 .slick-loading .slick-track { visibility: hidden; }
 
 .slick-slide { float: left; height: 100%; min-height: 1px; display: none; }
-.slick-slide img { display: block; pointer-events: none;}
+.slick-slide img { display: block; pointer-events: none; width: 100%;}
 .slick-slide.slick-loading img { display: none; }
 .slick-slide.dragging img { pointer-events: none; }
 .slick-initialized .slick-slide { display: block; }
