--- a/scss/main.scss
+++ b/scss/main.scss
@@ -77,3 +77,8 @@ table tr td th {
 h2 {
 	font-size: 1.5em;
 }
+.quoteWrapper {
+	height: 100px;
+	border: 5px solid black;
+	margin-bottom: 50px;
+}
