--- a/scss/main.scss
+++ b/scss/main.scss
@@ -80,9 +80,9 @@ h2 {
 }
 .quoteWrapper {
 	height: 75px;
-	border: 2px solid #DE2429;
+	border: none;
 	margin-bottom: 50px;
-	background-color: white;
+	background-color: none;
 	text-align: center;
 	vertical-align: middle;
 }
