styling changes, fixing blur effects

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,41 +1,93 @@
 
-.hidden {
-	display: none;
+h2 {
+	font-size: 1.5em;
+	color: white;
 }
 
+h3 {
+	color: black;
+	text-align: center;
+}
 
+#calendar {
+	margin-top: -15px;
+}
+.quoteWrapper {
+	height: 75px;
+	border: none;
+	margin-bottom: 50px;
+	background-color: none;
+	text-align: center;
+	vertical-align: middle;
+}
 
+body {
+	background-color: #DEDEDE;
+	/*#BFB7B4;*/
+	/*#00C7E6;*/
+	/*#0099B5*/
+}
+
+.quote {
+	background-color: #DE2429;
+}
+.top-bar-section li.active:not(.has-form) a:not(.button) {
+	background-color: #DE2429;
+
+}
+
+.top-bar-section li a:hover {	
+	background-color: #990000 !important;
+}
+
+.row > button:hover, .button:hover, button:focus, button {	
+	background-color: #990000;
+}
 button.reservation {
 	width: 100%;
 }
 
-button.quote {
+.quote {
 	width: 100%;
 }
+
+button:hover, button:focus, .button:hover, .button:focus {
+	background-color: #DE2429;
+	border-color: #990000;
+}
+
+
 .reservationWrap {
 	float: left;
 	margin-top: 50px;
 }
-.spacer {
-	width: 10%;
-	height: 900px;
-	float: left;
-}
+
 .reservation {
 	margin-top: 10px;
+	padding-left: 0px;
+	padding-right: 0px;
 }
 
-h3 {
-	text-align: center;
-
-}
 p {
 	text-align: center;
 	vertical-align: middle;
-
 }
+
 ul {
+	font-size: 1em;
 	list-style-type: none;
+	line-height: 2.5em;
+}
+.leftList {
+	text-align: right;
+}
+
+.leftList > img {
+	margin-left: 5px;
+}
+
+.row .row {
+	margin-top: 20px;
 }
 .icon {
 	width: 20px;
@@ -43,24 +95,30 @@ ul {
 	margin-right: 10px;
 }
 
-.address {
-	border: 5px solid black;
-	background: blue;
-	vertical-align: middle;
+.map {
+	text-align: center;
+	display: inline-block;
+	margin-bottom: 10px;
 }
-
 .slides {
 	margin: 0 auto;
+	margin-top: 10px;
+	margin-bottom: 0px;
 }
-#calendar {
 
+a > button, .button {
+	background-color: #DE2429;
 }
 
-
+.amenities {
+	color: black;
+	margin-bottom: -18px;
+}
 .quote {
 	width: 100%;
 }
 
+/*Date Picker*/
 .ui-datepicker {
 	position: absolute;
 	top: 0px;
@@ -68,6 +126,7 @@ ul {
 	text-align: center !important;
 
 }
+
 .ui-datepicker table tbody tr td  {
 	padding: 1px !important;
 	font-size: .5em !important;
@@ -83,43 +142,12 @@ table tr td th {
 	padding: 0px;
 	text-align: center;
 }
+
 #datepicker {
 	font-size: 62.5%;
 }
 
-h2 {
-	font-size: 1.5em;
-	color: white;
-}
-.quoteWrapper {
-	height: 75px;
-	border: none;
-	margin-bottom: 50px;
-	background-color: none;
-	text-align: center;
-	vertical-align: middle;
-}
 
-body {
-	background-color: #0099B5;
-}
-
-.quote {
-	background-color: #DE2429;
-}
-.top-bar-section li.active:not(.has-form) a:not(.button) {
-	background-color: #DE2429;
-
-}
-
-
-.top-bar-section li a:hover {	
-	background-color: #990000 !important;
-}
-
-button:hover, .button:hover {	
-	background-color: #990000 !important;
-}
 .date {
 	min-width: 100px;
 	font-size: 10em;
@@ -128,14 +156,28 @@ button:hover, .button:hover {
 select {
 	min-width: 75px;
 } 
-.fc-next-button, .fc-prev-button {
+
+.ui-datepicker-next {
+	float: right;
+}
+
+.ui-datepicker-prev {  
+	float: left;
+}  
+
+/*Full Calendar*/
+/*.fc-toolbar > .fc-next-button, .fc-prev-button */
+.fc button {
 	height: 39px !important;
-	background-color: #333333 !important;
+	background-color: #333333;
 	background-image: none !important;
 	border-radius: 0px !important;
 	box-shadow: none !important;
 }
 
+.fc-next-button, .fc-prev-button :hover {
+	background-color: #333333;
+}
 .fc-icon {
 	color: white !important;
 }
@@ -144,10 +186,23 @@ select {
 	background-color: #F0F0F0 !important;
 }
 
-.fc-day-number {
-	font-weight: normal !important;
-	text-align: left !important;
+tr > .fc-day-number {
+	font-weight: normal;
 }
-.fc-toolbar {
-	background-color: #1D2276 !important;
+#calendar > .fc-toolbar {
+	background-color: #00C7E6;
+}
+#hideCalendar {
+	opacity: 0%;
+	z-index: 0;
+}
+.fc-content {
+	background-color: #DE2429;
+	color: #DE2429;
+}
+td > .fc-day-grid-event {
+	margin: 0px;
+}
+td > .fc-event {
+	border-color: white;
 }
