--- a/scss/main.scss
+++ b/scss/main.scss
@@ -20,7 +20,10 @@ h3 {
 	text-align: center;
 	vertical-align: middle;
 }
-
+.fc-center > h2 {
+	font-family: Raleway;
+	font-style: italic;
+}
 body {
 	background-color: #DEDEDE;
 	/*#BFB7B4;*/
